--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,16 @@
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Super Trunfo Deputados</title>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-C826050ZN4"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-C826050ZN4');
+    </script>
   </head>
   <body>
     <noscript>Você precisa ter o Javascript habilitado em seu navegador.</noscript>
